src/SmeilParser.py
# Generated from Smeil.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class SmeilParser ( Parser ):

    grammarFileName = "Smeil.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'network'", u"'('", u"')'", u"'{'", 
                     u"'}'", u"'proc'", u"','", u"'in'", u"'out'", u"'const'", 
                     u"'var'", u"':'", u"'='", u"';'", u"'range'", u"'to'", 
                     u"'exposed'", u"'bus'", u"'instance'", u"'of'", u"'.'", 
                     u"'trace'", u"'\"'", u"'{}'", u"'+'", u"'-'", u"'*'", 
                     u"'/'", u"'%'", u"'=='", u"'!='", u"'<<'", u"'>>'", 
                     u"'<'", u"'>'", u"'>='", u"'<='", u"'&'", u"'|'", u"'^'", 
                     u"'&&'", u"'||'", u"'!'", u"'~'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"TYPENAME", u"IDENT", u"INTEGER", u"FLOATING", 
                      u"NUMBER", u"LETTER", u"HEXDIGIT", u"OCTALDIGIT", 
                      u"STRINGCHAR", u"WHITESPACE" ]

    RULE_module = 0
    RULE_entity = 1
    RULE_network = 2
    RULE_process = 3
    RULE_networkdecl = 4
    RULE_params = 5
    RULE_param = 6
    RULE_direction = 7
    RULE_vardecl = 8
    RULE_ranges = 9
    RULE_busdecl = 10
    RULE_bussignaldecl = 11
    RULE_instance = 12
    RULE_instancename = 13
    RULE_statement = 14
    RULE_formatstring = 15
    RULE_formatstringpart = 16
    RULE_expression = 17
    RULE_binop = 18
    RULE_unop = 19
    RULE_literal = 20
    RULE_stringliteral = 21
    RULE_name = 22

    ruleNames =  [ u"module", u"entity", u"network", u"process", u"networkdecl", 
                   u"params", u"param", u"direction", u"vardecl", u"ranges", 
                   u"busdecl", u"bussignaldecl", u"instance", u"instancename", 
                   u"statement", u"formatstring", u"formatstringpart", u"expression", 
                   u"binop", u"unop", u"literal", u"stringliteral", u"name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    TYPENAME=45
    IDENT=46
    INTEGER=47
    FLOATING=48
    NUMBER=49
    LETTER=50
    HEXDIGIT=51
    OCTALDIGIT=52
    STRINGCHAR=53
    WHITESPACE=54

    def __init__(self, input, output=sys.stdout):
        super(SmeilParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ModuleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.ModuleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def entity(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.EntityContext)
            else:
                return self.getTypedRuleContext(SmeilParser.EntityContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_module

        def accept(self, visitor):
            if hasattr(visitor, "visitModule"):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = SmeilParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self.entity()
                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SmeilParser.T__0 or _la==SmeilParser.T__5):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntityContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.EntityContext, self).__init__(parent, invokingState)
            self.parser = parser

        def network(self):
            return self.getTypedRuleContext(SmeilParser.NetworkContext,0)


        def process(self):
            return self.getTypedRuleContext(SmeilParser.ProcessContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_entity

        def accept(self, visitor):
            if hasattr(visitor, "visitEntity"):
                return visitor.visitEntity(self)
            else:
                return visitor.visitChildren(self)




    def entity(self):

        localctx = SmeilParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entity)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SmeilParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.network()
                pass
            elif token in [SmeilParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.process()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NetworkContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.NetworkContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SmeilParser.IDENT, 0)

        def params(self):
            return self.getTypedRuleContext(SmeilParser.ParamsContext,0)


        def networkdecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.NetworkdeclContext)
            else:
                return self.getTypedRuleContext(SmeilParser.NetworkdeclContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_network

        def accept(self, visitor):
            if hasattr(visitor, "visitNetwork"):
                return visitor.visitNetwork(self)
            else:
                return visitor.visitChildren(self)




    def network(self):

        localctx = SmeilParser.NetworkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_network)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(SmeilParser.T__0)
            self.state = 56
            self.match(SmeilParser.IDENT)
            self.state = 57
            self.match(SmeilParser.T__1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__7) | (1 << SmeilParser.T__8) | (1 << SmeilParser.T__9))) != 0):
                self.state = 58
                self.params()


            self.state = 61
            self.match(SmeilParser.T__2)
            self.state = 62
            self.match(SmeilParser.T__3)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmeilParser.T__18:
                self.state = 63
                self.networkdecl()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(SmeilParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcessContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.ProcessContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SmeilParser.IDENT, 0)

        def params(self):
            return self.getTypedRuleContext(SmeilParser.ParamsContext,0)


        def vardecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.VardeclContext)
            else:
                return self.getTypedRuleContext(SmeilParser.VardeclContext,i)


        def busdecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.BusdeclContext)
            else:
                return self.getTypedRuleContext(SmeilParser.BusdeclContext,i)


        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.StatementContext)
            else:
                return self.getTypedRuleContext(SmeilParser.StatementContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_process

        def accept(self, visitor):
            if hasattr(visitor, "visitProcess"):
                return visitor.visitProcess(self)
            else:
                return visitor.visitChildren(self)




    def process(self):

        localctx = SmeilParser.ProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_process)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(SmeilParser.T__5)
            self.state = 72
            self.match(SmeilParser.IDENT)
            self.state = 73
            self.match(SmeilParser.T__1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__7) | (1 << SmeilParser.T__8) | (1 << SmeilParser.T__9))) != 0):
                self.state = 74
                self.params()


            self.state = 77
            self.match(SmeilParser.T__2)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__10) | (1 << SmeilParser.T__16) | (1 << SmeilParser.T__17))) != 0):
                self.state = 80
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SmeilParser.T__10]:
                    self.state = 78
                    self.vardecl()
                    pass
                elif token in [SmeilParser.T__16, SmeilParser.T__17]:
                    self.state = 79
                    self.busdecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(SmeilParser.T__3)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmeilParser.T__21 or _la==SmeilParser.IDENT:
                self.state = 86
                self.statement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(SmeilParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NetworkdeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.NetworkdeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def instance(self):
            return self.getTypedRuleContext(SmeilParser.InstanceContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_networkdecl

        def accept(self, visitor):
            if hasattr(visitor, "visitNetworkdecl"):
                return visitor.visitNetworkdecl(self)
            else:
                return visitor.visitChildren(self)




    def networkdecl(self):

        localctx = SmeilParser.NetworkdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_networkdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.instance()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.ParamsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def param(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.ParamContext)
            else:
                return self.getTypedRuleContext(SmeilParser.ParamContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_params

        def accept(self, visitor):
            if hasattr(visitor, "visitParams"):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = SmeilParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.param()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmeilParser.T__6:
                self.state = 97
                self.match(SmeilParser.T__6)
                self.state = 98
                self.param()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.ParamContext, self).__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(SmeilParser.DirectionContext,0)


        def IDENT(self):
            return self.getToken(SmeilParser.IDENT, 0)

        def getRuleIndex(self):
            return SmeilParser.RULE_param

        def accept(self, visitor):
            if hasattr(visitor, "visitParam"):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = SmeilParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.direction()
            self.state = 105
            self.match(SmeilParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.DirectionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmeilParser.RULE_direction

        def accept(self, visitor):
            if hasattr(visitor, "visitDirection"):
                return visitor.visitDirection(self)
            else:
                return visitor.visitChildren(self)




    def direction(self):

        localctx = SmeilParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__7) | (1 << SmeilParser.T__8) | (1 << SmeilParser.T__9))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.VardeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SmeilParser.IDENT, 0)

        def TYPENAME(self):
            return self.getToken(SmeilParser.TYPENAME, 0)

        def expression(self):
            return self.getTypedRuleContext(SmeilParser.ExpressionContext,0)


        def ranges(self):
            return self.getTypedRuleContext(SmeilParser.RangesContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_vardecl

        def accept(self, visitor):
            if hasattr(visitor, "visitVardecl"):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = SmeilParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(SmeilParser.T__10)
            self.state = 110
            self.match(SmeilParser.IDENT)
            self.state = 111
            self.match(SmeilParser.T__11)
            self.state = 112
            self.match(SmeilParser.TYPENAME)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmeilParser.T__12:
                self.state = 113
                self.match(SmeilParser.T__12)
                self.state = 114
                self.expression(0)


            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmeilParser.T__14:
                self.state = 117
                self.ranges()


            self.state = 120
            self.match(SmeilParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RangesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.RangesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SmeilParser.ExpressionContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_ranges

        def accept(self, visitor):
            if hasattr(visitor, "visitRanges"):
                return visitor.visitRanges(self)
            else:
                return visitor.visitChildren(self)




    def ranges(self):

        localctx = SmeilParser.RangesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ranges)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SmeilParser.T__14)
            self.state = 123
            self.expression(0)
            self.state = 124
            self.match(SmeilParser.T__15)
            self.state = 125
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BusdeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.BusdeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SmeilParser.IDENT, 0)

        def bussignaldecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.BussignaldeclContext)
            else:
                return self.getTypedRuleContext(SmeilParser.BussignaldeclContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_busdecl

        def accept(self, visitor):
            if hasattr(visitor, "visitBusdecl"):
                return visitor.visitBusdecl(self)
            else:
                return visitor.visitChildren(self)




    def busdecl(self):

        localctx = SmeilParser.BusdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_busdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmeilParser.T__16:
                self.state = 127
                self.match(SmeilParser.T__16)


            self.state = 130
            self.match(SmeilParser.T__17)
            self.state = 131
            self.match(SmeilParser.IDENT)
            self.state = 132
            self.match(SmeilParser.T__3)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.bussignaldecl()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SmeilParser.IDENT):
                    break

            self.state = 138
            self.match(SmeilParser.T__4)
            self.state = 139
            self.match(SmeilParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BussignaldeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.BussignaldeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SmeilParser.IDENT, 0)

        def TYPENAME(self):
            return self.getToken(SmeilParser.TYPENAME, 0)

        def ranges(self):
            return self.getTypedRuleContext(SmeilParser.RangesContext,0)


        def expression(self):
            return self.getTypedRuleContext(SmeilParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_bussignaldecl

        def accept(self, visitor):
            if hasattr(visitor, "visitBussignaldecl"):
                return visitor.visitBussignaldecl(self)
            else:
                return visitor.visitChildren(self)




    def bussignaldecl(self):

        localctx = SmeilParser.BussignaldeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bussignaldecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(SmeilParser.IDENT)
            self.state = 142
            self.match(SmeilParser.T__11)
            self.state = 143
            self.match(SmeilParser.TYPENAME)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmeilParser.T__12:
                self.state = 144
                self.match(SmeilParser.T__12)
                self.state = 145
                self.expression(0)


            self.state = 148
            self.ranges()
            self.state = 149
            self.match(SmeilParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstanceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.InstanceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def instancename(self):
            return self.getTypedRuleContext(SmeilParser.InstancenameContext,0)


        def IDENT(self):
            return self.getToken(SmeilParser.IDENT, 0)

        def name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.NameContext)
            else:
                return self.getTypedRuleContext(SmeilParser.NameContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_instance

        def accept(self, visitor):
            if hasattr(visitor, "visitInstance"):
                return visitor.visitInstance(self)
            else:
                return visitor.visitChildren(self)




    def instance(self):

        localctx = SmeilParser.InstanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_instance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(SmeilParser.T__18)
            self.state = 152
            self.instancename()
            self.state = 153
            self.match(SmeilParser.T__19)
            self.state = 154
            self.match(SmeilParser.IDENT)
            self.state = 155
            self.match(SmeilParser.T__1)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmeilParser.IDENT:
                self.state = 156
                self.name(0)
                self.state = 157
                self.match(SmeilParser.T__20)
                self.state = 158
                self.name(0)


            self.state = 162
            self.match(SmeilParser.T__2)
            self.state = 163
            self.match(SmeilParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstancenameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.InstancenameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SmeilParser.IDENT, 0)

        def getRuleIndex(self):
            return SmeilParser.RULE_instancename

        def accept(self, visitor):
            if hasattr(visitor, "visitInstancename"):
                return visitor.visitInstancename(self)
            else:
                return visitor.visitChildren(self)




    def instancename(self):

        localctx = SmeilParser.InstancenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_instancename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(SmeilParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SmeilParser.NameContext,0)


        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SmeilParser.ExpressionContext,i)


        def formatstring(self):
            return self.getTypedRuleContext(SmeilParser.FormatstringContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_statement

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SmeilParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 185
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SmeilParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.name(0)
                self.state = 168
                self.match(SmeilParser.T__12)
                self.state = 169
                self.expression(0)
                self.state = 170
                self.match(SmeilParser.T__13)
                pass
            elif token in [SmeilParser.T__21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(SmeilParser.T__21)
                self.state = 173
                self.match(SmeilParser.T__1)
                self.state = 174
                self.formatstring()
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SmeilParser.T__6:
                    self.state = 175
                    self.match(SmeilParser.T__6)
                    self.state = 176
                    self.expression(0)
                    self.state = 181
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 182
                self.match(SmeilParser.T__2)
                self.state = 183
                self.match(SmeilParser.T__13)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormatstringContext(ParserRuleContext):
